force-app/main/default/objects/Asset/fields/Assembly_Type__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Type__c</fullName>
    <description>Assembly type for hardware.</description>
    <label>Assembly Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>