force-app/main/default/objects/Asset/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <description>The class of asset. These will be dependent on the ASSET_CATEGORY.-CCRM-83</description>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party HW Configuration</fullName>
            </value>
            <value>
                <fullName>Abaxis</fullName>
            </value>
            <value>
                <fullName>Advanced Imaging</fullName>
            </value>
            <value>
                <fullName>Automated Message Manager</fullName>
            </value>
            <value>
                <fullName>Automation Service</fullName>
            </value>
            <value>
                <fullName>AVImark</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Boarding Module</fullName>
            </value>
            <value>
                <fullName>Central Database</fullName>
            </value>
            <value>
                <fullName>Cenvet</fullName>
            </value>
            <value>
                <fullName>Cenvet Integration</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Cubex</fullName>
            </value>
            <value>
                <fullName>Data Access Module</fullName>
            </value>
            <value>
                <fullName>Database Services</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>DICOM</fullName>
            </value>
            <value>
                <fullName>Dragonfly</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>EFTPOS Integration</fullName>
            </value>
            <value>
                <fullName>eVetPractice</fullName>
            </value>
            <value>
                <fullName>Google Calendar</fullName>
            </value>
            <value>
                <fullName>Health Care Manager</fullName>
            </value>
            <value>
                <fullName>HealthyPet</fullName>
            </value>
            <value>
                <fullName>Idexx</fullName>
            </value>
            <value>
                <fullName>Impromed</fullName>
            </value>
            <value>
                <fullName>Impromed Equine</fullName>
            </value>
            <value>
                <fullName>iRecall</fullName>
            </value>
            <value>
                <fullName>IVLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>