force-app/main/default/objects/Asset/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>This is a multi select to further describe the asset.  E.G. activated software modules,  subscriptions terms, Lab service provider, etc.CCRM-83</description>
    <label>Asset Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>AVImark</fullName>
            </value>
            <value>
                <fullName>CAL</fullName>
            </value>
            <value>
                <fullName>Data Vault</fullName>
            </value>
            <value>
                <fullName>DICOM</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>Eversafe</fullName>
            </value>
            <value>
                <fullName>IDSS</fullName>
            </value>
            <value>
                <fullName>ImproMed</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>IVLS</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>New Order</fullName>
            </value>
            <value>
                <fullName>Online Academy</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Module - Core</fullName>
            </value>
            <value>
                <fullName>Module - Additional</fullName>
            </value>
            <value>
                <fullName>Module - Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>