force-app/main/default/objects/Asset/fields/Computer_Name__c.field-meta.xml
<CustomField>
    <fullName>Computer_Name__c</fullName>
    <description>Name or identifier for the computer that has the software installed on it.CCRM-83</description>
    <label>Computer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>