force-app/main/default/objects/Asset/fields/Covered__c.field-meta.xml
<CustomField>
    <fullName>Covered__c</fullName>
    <formula>IF((TODAY() &lt; Warranty_Expiry_Date__c  ||  TODAY() &lt; RootAsset.Support_Expiry_Date__c ), True, False)</formula>
    <label>Covered</label>
    <type>Checkbox</type>
</CustomField>