force-app/main/default/objects/Asset/fields/Covetrus_Id__c.field-meta.xml
<CustomField>
    <fullName>Covetrus_Id__c</fullName>
    <description>Animal Care Business or Animal Care Business  OwnerMaster  ID-CCRM-83</description>
    <formula>Account.Covetrus_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covetrus Id</label>
    <type>Text</type>
</CustomField>