force-app/main/default/objects/Asset/fields/Customer_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset_Name__c</fullName>
    <label>Customer Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>