force-app/main/default/objects/Asset/fields/Demo_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Expiry_Date__c</fullName>
    <label>Demo Expiry Date</label>
    <type>Date</type>
</CustomField>