force-app/main/default/objects/Asset/fields/ERP_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Number__c</fullName>
    <description>This is the product reference in the ERP.CCRM-83</description>
    <label>ERP Product Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>