force-app/main/default/objects/Asset/fields/Hardware_Express_Covered_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Express_Covered_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hardware express - is it covered?</description>
    <label>Hardware Express Covered Flag</label>
    <type>Checkbox</type>
</CustomField>