force-app/main/default/objects/Asset/fields/Hardware_Express_Price__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Express_Price__c</fullName>
    <label>Hardware Express Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>