force-app/main/default/objects/Asset/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>Why was the asset deactivated. CCRM-83</description>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changed Communication Provider</fullName>
            </value>
            <value>
                <fullName>Changed PIMS</fullName>
            </value>
            <value>
                <fullName>Clinic Closed</fullName>
            </value>
            <value>
                <fullName>Clinic Merged</fullName>
            </value>
            <value>
                <fullName>Clinic Sold</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Covetrus Reputation</fullName>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
            <value>
                <fullName>Dissatisfied - Implementation</fullName>
            </value>
            <value>
                <fullName>Dissatisfied - Integration Partners</fullName>
            </value>
            <value>
                <fullName>Dissatisfied - Product</fullName>
            </value>
            <value>
                <fullName>Dissatisfied - Product Value</fullName>
            </value>
            <value>
                <fullName>Dissatisfied - Support</fullName>
            </value>
            <value>
                <fullName>Doesn&#39;t Use / Need</fullName>
            </value>
            <value>
                <fullName>Failed Minimum Requirements</fullName>
            </value>
            <value>
                <fullName>Family Product Transition</fullName>
            </value>
            <value>
                <fullName>Incompatible PIMS</fullName>
            </value>
            <value>
                <fullName>Locally Sourced</fullName>
            </value>
            <value>
                <fullName>Non Payment</fullName>
            </value>
            <value>
                <fullName>Order Return - Decided not to move forward</fullName>
            </value>
            <value>
                <fullName>Order Return – Dissatisfied Product</fullName>
            </value>
            <value>
                <fullName>Order Return - Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Order Return - Other</fullName>
            </value>
            <value>
                <fullName>Order Return - Product not available to customer</fullName>
            </value>
            <value>
                <fullName>Order Return - Setup Challenges</fullName>
            </value>
            <value>
                <fullName>Order Return - Was not interested in the product</fullName>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Product Cost</fullName>
            </value>
            <value>
                <fullName>Temporary / One Time Use</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>