force-app/main/default/objects/Asset/fields/Integration_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Requested_Date__c</fullName>
    <label>Integration Requested Date</label>
    <type>DateTime</type>
</CustomField>