force-app/main/default/objects/Asset/fields/Laptop_Transfer_License__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Transfer_License__c</fullName>
    <label>Laptop Transfer License</label>
    <length>80</length>
    <type>Text</type>
</CustomField>