force-app/main/default/objects/Asset/fields/Last_Referenced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Referenced_Date__c</fullName>
    <label>Last Referenced Date</label>
    <type>Date</type>
</CustomField>