force-app/main/default/objects/Asset/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>If there is a separate license number from the software serial number, then record it in this field.CCRM-83</description>
    <label>License Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>