force-app/main/default/objects/Asset/fields/License_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Start_Date__c</fullName>
    <description>For licensed software systems, this will be the recorded end date for the license.  This will normally be set during workflow performance or with a renewal. CCRM-83</description>
    <label>License Start Date</label>
    <type>Date</type>
</CustomField>