force-app/main/default/objects/Asset/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line of Business</label>
    <referenceTo>Line_of_Business__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>