force-app/main/default/objects/Asset/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <formula>Line_of_Business__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB</label>
    <type>Text</type>
</CustomField>