force-app/main/default/objects/Asset/fields/Manuafacturer_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Manuafacturer_Item_Number__c</fullName>
    <description>Covetrus part number.CCRM-83</description>
    <label>Manuafacturer Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>