force-app/main/default/objects/Asset/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>The product make.CCRM-83</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>