force-app/main/default/objects/Asset/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <description>Merchant ID number</description>
    <label>Merchant ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>