force-app/main/default/objects/Asset/fields/Server_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>Server_OS_Version__c</fullName>
    <description>This field contains software version</description>
    <label>Server OS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>