force-app/main/default/objects/Asset/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>Start Date of service if applicable.CCRM-83</description>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>