force-app/main/default/objects/Asset/fields/Software_Status__c.field-meta.xml
<CustomField>
    <fullName>Software_Status__c</fullName>
    <label>Software Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>