force-app/main/default/objects/Asset/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <description>This will record the current version of the software.CCRM-83</description>
    <label>Software Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>