force-app/main/default/objects/Asset/fields/Specs__c.field-meta.xml
<CustomField>
    <fullName>Specs__c</fullName>
    <label>Specs</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>