force-app/main/default/objects/Asset/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of support.CCRM-83</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>