force-app/main/default/objects/Asset/fields/Subscription_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Paid_Date__c</fullName>
    <description>This corresponds to the most recent payment date for the subscription.  Note: subscription may become invalid if payment is not within the terms.CCRM-83</description>
    <label>Subscription Paid Date</label>
    <type>Date</type>
</CustomField>