force-app/main/default/objects/Asset/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description>If this is a subscription, then record the start date. Either the license start or subscription start will be required but not both.CCRM-83</description>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>