force-app/main/default/objects/Asset/fields/Support_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Expiry_Date__c</fullName>
    <label>Support Expiry Date</label>
    <type>Date</type>
</CustomField>