force-app/main/default/objects/Asset/fields/Support_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Start_Date__c</fullName>
    <label>Support Start Date</label>
    <type>Date</type>
</CustomField>