force-app/main/default/objects/Asset/fields/Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Support_Status__c</fullName>
    <formula>IF(NOT(ISBLANK(Support_Expiry_Date__c)),
IMAGE 
( 
 
 IF( TODAY() &lt;  Support_Expiry_Date__c  ,
   &quot;/img/samples/flag_green.gif&quot;, 
     IF(  AND(  TODAY() &gt;= Support_Expiry_Date__c, 
                TODAY() &lt;=  Support_Expiry_Date__c + 30) ,
       &quot;/img/samples/flag_yellow.gif&quot;, 
         IF(TODAY() &gt; Support_Expiry_Date__c + 30,
           &quot;/img/samples/flag_red.gif&quot; , &quot;&quot;)
     ) 
 ),
&quot;&quot;, 20, 20
), &quot; &quot;
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Status</label>
    <type>Text</type>
</CustomField>