force-app/main/default/objects/Asset/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <description>Asset Data will be sent to Boomi as soon as this field is updated.</description>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>