force-app/main/default/objects/Asset/fields/Vendor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice_Number__c</fullName>
    <description>Vendor invoice number.</description>
    <label>Vendor Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>