force-app/main/default/objects/Asset/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Asset vendor name.</description>
    <inlineHelpText>Asset vendor name.</inlineHelpText>
    <label>Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>