force-app/main/default/objects/Asset/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>This field contains system version number of the software</description>
    <label>Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>