force-app/main/default/objects/Asset/fields/Vetstreet_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_Go_Live_Date__c</fullName>
    <label>Vetstreet Go Live Date</label>
    <type>Date</type>
</CustomField>