force-app/main/default/objects/Asset/fields/Vetstreet_Last_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_Last_Transfer_Date__c</fullName>
    <label>Vetstreet Last Transfer Date</label>
    <type>Date</type>
</CustomField>