force-app/main/default/objects/Asset/fields/Vetstreet_Last_Vet_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_Last_Vet_Portal_Login__c</fullName>
    <label>Vetstreet Last Vet Portal Login</label>
    <type>Date</type>
</CustomField>