force-app/main/default/objects/Asset/fields/Vetstreet_MDM_Status__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_MDM_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vetstreet MDM Status</label>
    <type>Checkbox</type>
</CustomField>