force-app/main/default/objects/Asset/fields/Vetstreet_Pet_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_Pet_Portal_Login__c</fullName>
    <label>Vetstreet Pet Portal Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>