force-app/main/default/objects/Asset/fields/Vetstreet_Postgres_Status__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_Postgres_Status__c</fullName>
    <label>Vetstreet Postgres Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>