force-app/main/default/objects/Asset/fields/Vetstreet_Think_Pets__c.field-meta.xml
<CustomField>
    <fullName>Vetstreet_Think_Pets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vetstreet Think Pets</label>
    <type>Checkbox</type>
</CustomField>