force-app/main/default/objects/Asset/fields/Warranty_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry_Date__c</fullName>
    <description>Warranty expiration date.CCRM-83</description>
    <label>Warranty Expiry Date</label>
    <type>Date</type>
</CustomField>