force-app/main/default/objects/Asset/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <description>Start date of hardware warranty.CCRM-83</description>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>