force-app/main/default/objects/Asset/recordTypes/Hardware.recordType-meta.xml
<RecordType>
    <fullName>Hardware</fullName>
    <active>true</active>
    <description>This asset category describes the hardware assets sold to an Animal Care Business (Clinic) that support or are used in conjunction with a sold software asset.</description>
    <label>Hardware</label>
</RecordType>