force-app/main/default/objects/Asset/recordTypes/Practice_Performance.recordType-meta.xml
<RecordType>
    <fullName>Practice_Performance</fullName>
    <active>true</active>
    <description>This asset category describes additional products sold or provided by Covetrus as add-ons to a base program or stand-alone features.  They may be in the form of a subscription or license, but the key is that they are sold or provided by Covetrus to the An</description>
    <label>Practice Performance</label>
</RecordType>