force-app/main/default/objects/Asset/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <description>This asset category describes those services provided by or brokered by Covetrus. Practice consulting services, lab services, training, etc</description>
    <label>Services</label>
</RecordType>