force-app/main/default/objects/Asset/recordTypes/Software.recordType-meta.xml
<RecordType>
    <fullName>Software</fullName>
    <active>true</active>
    <description>This asset category describes the Practice management software to include the configuration of that software (modules and versions) that has been sold to a particular Animal Care Business (Clinic)</description>
    <label>Software</label>
</RecordType>