force-app/main/default/objects/Asset/recordTypes/Support.recordType-meta.xml
<RecordType>
    <fullName>Support</fullName>
    <active>true</active>
    <description>This asset category describes maintenance support agreements for Practice Management or Practice Performance assets that are provided.</description>
    <label>Support</label>
</RecordType>