force-app/main/default/objects/Asset/listViews/Practice_Performance.listView-meta.xml
<ListView>
    <fullName>Practice_Performance</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Practice_Performance</value>
    </filters>
    <label>Practice Performance</label>
</ListView>