force-app/main/default/objects/Asset/listViews/Support.listView-meta.xml
<ListView>
    <fullName>Support</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Support</value>
    </filters>
    <label>Support</label>
</ListView>